--- a/Project/LD37/LD37.CSharp.csproj
+++ b/Project/LD37/LD37.CSharp.csproj
@@ -93,8 +93,6 @@
     <None Include="Assets\PixelPerfect\README.txt" />
     <None Include="Assets\PixelPerfect\Scripts\Internal\Resources\PixelPerfectShader.shader" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Assets\Scripts\Characters\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
