--- a/Project/LD37/LD37.CSharp.csproj
+++ b/Project/LD37/LD37.CSharp.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Assets\Scripts\Controllers\EffectController.cs" />
     <Compile Include="Assets\Scripts\Controllers\LevelConfigurationController.cs" />
     <Compile Include="Assets\Scripts\Controllers\MovementController.cs" />
+    <Compile Include="Assets\Scripts\Core\Bars\BulletsBar.cs" />
     <Compile Include="Assets\Scripts\Core\Bars\HealthBar.cs" />
     <Compile Include="Assets\Scripts\Core\CustomMonoBehaviour.cs" />
     <Compile Include="Assets\Scripts\Core\Depended\MouseRotatedComponent.cs" />
