--- a/Project/LD37/LD37.CSharp.Editor.csproj
+++ b/Project/LD37/LD37.CSharp.Editor.csproj
@@ -5,17 +5,17 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{87A9D430-3C31-B6A9-3341-0C1244C55C56}</ProjectGuid>
+    <ProjectGuid>{A3F6AC73-645D-A55F-6218-18E9FAB481E2}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AssemblyName>Assembly-CSharp</AssemblyName>
+    <AssemblyName>Assembly-CSharp-Editor</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
+    <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
     <CompilerResponseFile>
     </CompilerResponseFile>
-    <UnityProjectType>Game:1</UnityProjectType>
+    <UnityProjectType>Editor:5</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.3.5f1</UnityVersion>
     <RootNamespace>
@@ -54,50 +54,63 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor">
+      <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.Advertisements">
+      <HintPath>Library\UnityAssemblies\UnityEditor.Advertisements.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>Library\UnityAssemblies\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.EditorTestsRunner">
+      <HintPath>Library\UnityAssemblies\UnityEditor.EditorTestsRunner.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.UI">
+      <HintPath>Library\UnityAssemblies\UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor">
-      <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
+    <Reference Include="UnityEditor.Networking">
+      <HintPath>Library\UnityAssemblies\UnityEditor.Networking.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.TreeEditor">
+      <HintPath>Library\UnityAssemblies\UnityEditor.TreeEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.Graphs">
+      <HintPath>Library\UnityAssemblies\UnityEditor.Graphs.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.Android.Extensions">
+      <HintPath>Library\UnityAssemblies\UnityEditor.Android.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.WebGL.Extensions">
+      <HintPath>Library\UnityAssemblies\UnityEditor.WebGL.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.WindowsStandalone.Extensions">
+      <HintPath>Library\UnityAssemblies\UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.OSXStandalone.Extensions">
+      <HintPath>Library\UnityAssemblies\UnityEditor.OSXStandalone.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
+      <HintPath>Library\UnityAssemblies\SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\BulletSpawner\BulletSpawner.cs" />
-    <Compile Include="Assets\BulletSpawner\MainCharacter\SimpleMainCharacterBulletSpawner.cs" />
-    <Compile Include="Assets\PixelPerfect\Scripts\Internal\PixelPerfect.cs" />
-    <Compile Include="Assets\PixelPerfect\Scripts\Internal\PixelPerfectHSBColor.cs" />
-    <Compile Include="Assets\PixelPerfect\Scripts\Internal\PixelPerfectObject.cs" />
-    <Compile Include="Assets\PixelPerfect\Scripts\PixelPerfectCamera.cs" />
-    <Compile Include="Assets\PixelPerfect\Scripts\PixelPerfectSprite.cs" />
-    <Compile Include="Assets\Scripts\Bullet\BulletBase.cs" />
-    <Compile Include="Assets\Scripts\Bullet\SimpleBullet.cs" />
-    <Compile Include="Assets\Scripts\Controllers\BaseController.cs" />
-    <Compile Include="Assets\Scripts\Controllers\CircleController.cs" />
-    <Compile Include="Assets\Scripts\Controllers\EffectController.cs" />
-    <Compile Include="Assets\Scripts\Controllers\LevelConfigurationController.cs" />
-    <Compile Include="Assets\Scripts\Controllers\MovementController.cs" />
-    <Compile Include="Assets\Scripts\Core\Bars\BulletsBar.cs" />
-    <Compile Include="Assets\Scripts\Core\Bars\HealthBar.cs" />
-    <Compile Include="Assets\Scripts\Core\CustomMonoBehaviour.cs" />
-    <Compile Include="Assets\Scripts\Core\Depended\MouseRotatedComponent.cs" />
-    <Compile Include="Assets\Scripts\Core\Depended\PositionDependedComponent.cs" />
-    <Compile Include="Assets\Scripts\Core\DestroyableComponent.cs" />
-    <Compile Include="Assets\Scripts\Core\Pull\PoolObject.cs" />
-    <Compile Include="Assets\Scripts\Core\Pull\PortablePool.cs" />
-    <Compile Include="Assets\Scripts\DisplayFPS.cs" />
-    <Compile Include="Assets\Scripts\EnemiesSpawners\EnemySpawner.cs" />
-    <Compile Include="Assets\Scripts\MovementComponents\Circle transform components\SimpleCircleControlComponent.cs" />
-    <Compile Include="Assets\Scripts\MovementComponents\Enemies\SimpleEnemy.cs" />
-    <Compile Include="Assets\Scripts\MovementComponents\MainCharacter.cs" />
-    <Compile Include="Assets\Scripts\MovementComponents\MovementComponent.cs" />
-    <Compile Include="Assets\Scripts\OWCCursorRenderer\OWCCursor.cs" />
-    <Compile Include="Assets\Scripts\OWCCursorRenderer\OWCCursorRenderer.cs" />
-    <Compile Include="Assets\Scripts\Weapons\BaseWeapon.cs" />
-    <Compile Include="Assets\Scripts\Weapons\MainCharacterWeapons\SimpleMainCharacterGun.cs" />
-    <Compile Include="Assets\Scripts\Weapons\WeaponHandler\CharacterWeaponHandler.cs" />
+    <ProjectReference Include="LD37.CSharp.csproj">
+      <Project>{87A9D430-3C31-B6A9-3341-0C1244C55C56}</Project>
+      <Name>LD37.CSharp</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Assets\Editor\Scripts\ObjectCreatorHelper.cs" />
+    <Compile Include="Assets\Editor\Scripts\OWCCursorEditor.cs" />
+    <Compile Include="Assets\Editor\Scripts\UnityCreateGUI.cs" />
+    <Compile Include="Assets\Editor\Scripts\VectorHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\PixelPerfect\README.txt" />
