--- a/Project/LD37/LD37.CSharp.Editor.csproj
+++ b/Project/LD37/LD37.CSharp.Editor.csproj
@@ -118,6 +118,7 @@
     <None Include="Assets\PixelPerfect\Scripts\Internal\Resources\PixelPerfectShader.shader" />
     <None Include="Assets\Shaders\Bar shader.shader" />
     <None Include="Assets\Shaders\ColorReplaceShader.shader" />
+    <None Include="Assets\Shaders\ProgressShader.shader" />
     <None Include="Assets\Shaders\SimpleTransitionShader.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
