--- a/Project/LD37/LD37.CSharp.csproj
+++ b/Project/LD37/LD37.CSharp.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Assets\Scripts\Controllers\LevelConfigurationController.cs" />
     <Compile Include="Assets\Scripts\Controllers\MovementController.cs" />
     <Compile Include="Assets\Scripts\Controllers\PreviewController.cs" />
+    <Compile Include="Assets\Scripts\Controllers\SoundEffectController.cs" />
     <Compile Include="Assets\Scripts\Controllers\SpawnSystem\SpawnController.cs" />
     <Compile Include="Assets\Scripts\Controllers\SpawnSystem\Spawner\SpawnerInfo.cs" />
     <Compile Include="Assets\Scripts\Controllers\SpawnSystem\Spawner\Wave.cs" />
